# Job-Copilot

./: README.md
agent/: README.md  dev_mock_server.py  dev_mock_server_4000.py  pyproject.toml
agent/src/inbox_triage_agent/: __init__.py  api_client.py  classifier.py  cli.py  models.py  ollama_client.py  rules.py  runner.py  settings.py
agent/src/inbox_triage_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent/tests/: test_classifier.py
backend/: Dockerfile  Gemfile  README.md  dump.rdb
backend/app/controllers/: application_controller.rb  applications_controller.rb  auth_controller.rb  classifications_controller.rb  debug_controller.rb  insights_controller.rb  me_controller.rb  messages_controller.rb  syncs_controller.rb
backend/app/jobs/: gmail_incremental_sync_job.rb  gmail_user_sync_job.rb  google_token_health_job.rb
backend/app/models/: application_event.rb  contact.rb  message.rb  user.rb
backend/app/services/: calendar_writer.rb  email_classifier.rb  email_time_parser.rb  google_client_factory.rb  ollama_email_classifier.rb  parsed_message_ingester.rb
backend/config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb  sidekiq_schedule.yml
backend/config/credentials/: development.yml.enc
backend/config/environments/: test.rb
backend/config/initializers/: cors.rb  session_store.rb  sidekiq.rb
backend/db/: schema.rb
backend/test/: test_helper.rb
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  main.jsx
(+29 files in other folders)
