[project]
name = "inbox-triage-agent"
version = "0.1.0"
description = "Background worker that classifies emails using a local Ollama model and updates the Job Copilot API."
authors = [{ name = "Job Copilot" }]
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<0.28",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "tenacity>=8.2,<9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[project.scripts]
inbox-triage-agent = "inbox_triage_agent.cli:main"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
